--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,111 @@
+
 version: 2
+
+
+references:
+  triggerable-by-tag: &triggerable-by-tag
+    # For a tag push unaffected by any filters, CircleCI skips the job
+    # https://circleci.com/docs/2.0/workflows/#git-tag-job-execution
+    tags:
+      only: /^v[0-9]+\.[0-9]+\.[0-9]+(-(alpha|beta)\.\d+)?$/
+
+  default_container_config: &default_container_config
+    working_directory: ~/project
+    docker:
+      - image: circleci/node:8.10.0
+
+  npm_cache_key: &npm_cache_key
+    v2-dependency-npm-{{ checksum "package-lock.json" }}
+
+  restore_node_dependencies: &restore_node_dependencies
+    restore_cache:
+      keys:
+        - *npm_cache_key
+
+  cache_node_dependencies: &cache_node_dependencies
+    save_cache:
+      key: *npm_cache_key
+      paths:
+        - "node_modules"
+
+  workspace_root: &workspace_root
+    ~/project
+
+  attach_workspace: &attach_workspace
+    attach_workspace:
+      at: *workspace_root
+
+jobs:
+  install:
+    <<: *default_container_config
+    steps:
+      - checkout
+
+      - *restore_node_dependencies
+
+      - run:
+          name: Install dependencies
+          command: npm install
+
+      - *cache_node_dependencies
+
+      - persist_to_workspace:
+          root: *workspace_root
+          paths:
+            - .
+
+  #test:
+   # <<: *default_container_config
+    #steps:
+     # - *attach_workspace
+
+      #- run:
+       #   name: Run tests
+        #  command: make test
+  #verify:
+   # <<: *default_container_config
+    #steps:
+     # - *attach_workspace
+
+      #- run:
+       #   name: Run tests
+        #  command: make verify -j 3
+
+  release:
+    <<: *default_container_config
+    steps:
+      - *attach_workspace
+      - run:
+          name: npm auth
+          command: echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > ${HOME}/.npmrc
+      - run:
+          name: Publish to npm
+          command: npm version --no-git-tag-version npm publish --access public
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - install:
+          filters:
+            <<: *triggerable-by-tag
+      #- test:
+       #   requires:
+        #    - install
+         # filters:
+          #  <<: *triggerable-by-tag
+      #- verify:
+       #   context: rel-eng-creds
+        #  requires:
+         #   - install
+          #filters:
+           # <<: *triggerable-by-tag
+      - release:
+          requires:
+            - install
+            #- test
+            #- verify
+          filters:
+            <<: *triggerable-by-tag
+            branches:
+              ignore: /.*/
