--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "CSV importer",
   "main": "index.js",
   "directories": {
-    "lib": "lib",
     "test": "test"
   },
   "repository": {
@@ -19,12 +18,10 @@
   },
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidChart#readme",
   "devDependencies": {
-    "@financial-times/rel-engage": "^5.1.0-beta.13",
     "jest": "^23.6.0"
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
-    "lodash": "^4.17.10",
-    "uuid": "^3.1.0"
+    "lodash": "^4.17.10"
   }
 }
