--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "util": "^0.12.0"
   }
 }
