--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,10 +77,10 @@ jobs:
       - *attach_workspace
       - run:
           name: npm auth
-          command: echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > ${HOME}/.npmrc
+          command: echo "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}" > ~/project/.npmrc
       - run:
           name: Publish to npm
-          command: npm publish
+          command: npm publish --access public
 
 workflows:
   version: 2
