Make the importer independent

--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "url": "https://github.com/Financial-Times/ip-envoy-lucidimporter/issues"
   },
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidimporter#readme",
+  "scripts": {
+    "start": "VAULT_PATH=secret/teams/internal-products/ip-envoy-lucidimporter/prod  node --require @financial-times/vaultenv"
+  },
   "devDependencies": {
     "jest": "^23.6.0"
   },
   "dependencies": {
-    "@financial-times/n-logger": "^5.7.2",
+    "@financial-times/vaultenv": "^0.3.2",
+    "knex": "^0.17.3",
     "lodash": "^4.17.10",
+    "pg": "^7.11.0",
     "util": "^0.12.0"
   }
 }
