--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
   },
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidimporter#readme",
   "devDependencies": {
+    "@financial-times/secret-squirrel": "^2.12.3",
     "jest": "^23.6.0"
   },
   "dependencies": {
+    "husky": "^2.4.0",
     "lodash": "^4.17.10",
     "util": "^0.12.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "secret-squirrel-commitmsg && npm run lint",
+      "pre-commit": "secret-squirrel"
+    }
   }
 }
