--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidimporter#readme",
   "scripts": {
-    "prepare": "snyk protect",
-    "test": "snyk test"
+    "prepare": "snyk protect"
   },
   "devDependencies": {
     "@financial-times/secret-squirrel": "^2.12.3",
