breaking long importer file in to tiny modules  🐿 v2.12.3

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@financial-times/ip-envoy-lucidimporter",
   "version": "0.0.0",
   "description": "Lucid chart importer",
-  "main": "index.js",
+  "main": "src/index.js",
   "directories": {
     "test": "test"
   },
