--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ references:
     docker:
       - image: circleci/node:8.10.0
         environment:
-          DATABASE_URL: postgres://c4_admin:testpw@localhost:5432/c4test
+        DATABASE_URL: postgres://c4_admin:testpw@localhost:5432/c4test
       - image: circleci/postgres:9.6.5-alpine-ram
         environment:
           POSTGRES_DB: c4test
@@ -71,7 +71,7 @@ jobs:
 
 workflows:
   version: 2
-  test-build-and-deploy:
+  build-and-deploy:
     jobs:
       - install:
           filters:
