--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "path": "^0.12.7",
     "pg": "^7.11.0",
     "snyk": "^1.174.1",
-    "util": "^0.12.0"
+    "util": "^0.12.0",
+    "wait-for-expect": "^1.2.0"
   },
   "husky": {
     "hooks": {
