Prevent creating dynamic ruleset_id in production database and terminate Track Importing  🐿 v2.12.4

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/Financial-Times/ip-envoy-lucidimporter#readme",
   "scripts": {
     "prepare": "snyk protect",
-    "test": "snyk test && jest"
+    "test": "jest"
   },
   "devDependencies": {
     "@financial-times/secret-squirrel": "^2.12.3",
