--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@financial-times/ip-envoy-lucidimporter",
   "version": "2.0.0",
-  "description": "Lucid chart importer",
+  "description": "Lucid chart importer v2",
   "main": "src/index.js",
   "directories": {
     "test": "test",
