--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^2.4.0",
     "knex": "^0.17.6",
     "lodash": "^4.17.10",
+    "@financial-times/n-logger": "^6.0.1",
     "pg": "^7.11.0",
     "snyk": "^1.174.1",
     "util": "^0.12.0",
