--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^2.4.0",
     "knex": "^0.19.5",
     "lodash": "^4.17.10",
+    "path": "^0.12.7",
     "pg": "^7.11.0",
     "snyk": "^1.281.1",
     "util": "^0.12.0",
